Corrections de bugs, refonte de la page d'acceuil pour les joueurs.

--- a/src/LarpManager/Views/classe/fragment/info.twig
+++ b/src/LarpManager/Views/classe/fragment/info.twig
@@ -1,7 +1,9 @@
 <div class="panel panel-default">
-	<div class="panel-heading">
-		{{ classe.label }}
+
+	<div class="header">
+		<h5>{{ classe.label }}</h5>
 	</div>
+	
 	<div class="panel-body">
 		<blockquote>
 			<p class="text-justify">{{ classe.description|markdown }}</p>
