--- a/src/LarpManager/Views/public/religion/list.twig
+++ b/src/LarpManager/Views/public/religion/list.twig
@@ -22,7 +22,9 @@
 			    		</div>
 			    	</div>
 			    	<div class="media-body">
-		      			<h4 class="media-heading">{{ religion.label }}</h4>
+			    		<div class="header">
+		      				<h5 class="media-heading">{{ religion.label }}</h5>
+		      			</div>
 		      			<p>{{ religion.description|markdown }}</p>
 		      		</div>
 		    	</div>
