--- a/src/LarpManager/Views/forum/fragment/topic_list.twig
+++ b/src/LarpManager/Views/forum/fragment/topic_list.twig
@@ -38,7 +38,7 @@
 						{% set lastPost = topic.lastPost(app) %}
 						{% if lastPost %}
 							Dernier message :
-							<a href="{{ path('forum.post',{'index':lastPost.id}) }}">
+							<a href="{{ path('forum.post',{'index':lastPost.ancestor.id}) }}">
 								{{ lastPost.title }}	
 							</a><br />
 							Par <a href="{{ path('user.view',{'id': lastPost.user.id}) }}">{{ lastPost.user.username }}</a><br />
