--- a/web/css/style.css
+++ b/web/css/style.css
@@ -53,15 +53,24 @@ body {
   border: none; /* get rid of the border */
 }
 
+.header
+{
+  background: url('/img/header.png') repeat scroll 0% 0% / 100% 100% transparent;
+  padding: 0px 10px;
+  margin: 2px 0px 10px;
+  text-align: center;
+  border: 0px none;
+}
+
 ul.forum 
 {
- background-color:#fff;
+ background-color:#f2f2f2;
  color: #000;
 }
 
 ul.forum li
 {
-  background-color:#fff;
+  background-color:#f2f2f2;
   border-color: #aaa;
 }
 
