--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -28,6 +28,7 @@
 						<li><a href="{{ path('groupeSecondaire.admin.list') }}">Liste des groupes secondaires</a></li>
 						<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
 						<li><a href="{{ path('right.admin.list') }}">Liste des droits</a></li>
+						<li><a href="{{ path('statistique') }}">Statistiques</a></li>
 					</ul>
 				</li>
 			{% endif %}
@@ -43,8 +44,8 @@
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('religion') }}">Religions</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
-						<li><a href="{{ path('statistique') }}">Statistiques</a></li>
 						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
+						<li><a href="{{ path('chronologie') }}">Chronologie</a></li>
 					</ul>
 				</li>
 			{% endif %}
