--- a/src/LarpManager/Views/admin/chronologie/add.twig
+++ b/src/LarpManager/Views/admin/chronologie/add.twig
@@ -4,8 +4,8 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('background.list') }}">Liste des background</a></li>
-		<li class="active">Ajout d'un background</li>
+		<li><a href="{{ path('chronologie') }}">Liste des événements</a></li>
+		<li class="active">Ajout d'un événement</li>
 	</ol>
 	
 	<div class="well bs-component">
@@ -19,21 +19,25 @@
 		</form>
 	</div>
 	
-	{#
-	<form action="{{ path('chrono_add') }}" method="POST">
-		<div>
-			<label for="paysId">Pays</label>
-			<select name="paysId">
-			{% for item in pays %}
-            	<option value="{{ item.id }}">{{ item.nom }}</option>
-        	{% endfor %}
-        	</select>
-			<label for="date">Date</label>
-			<input type="text" name="date" />
-			<label for="description">Description</label>
-			<input type="text" name="description" />
-		</div>
-		<input type="submit" value="Enregistrer" />
-	</form>
-	#}
 {% endblock %}
+
+{% block javascript %}
+
+	{{ parent() }}
+
+	{# inclusion du plugin tinymce pour la saisie du post #}   
+	<script src="{{ app.request.basepath }}/js/tinymce/tinymce.min.js"></script>
+
+	<script type="text/javascript">
+	tinyMCE.init({
+		mode: "textareas",
+		theme: "modern",
+		plugins : "spellchecker,insertdatetime,preview,link,autolink",
+		browser_spellcheck: true,
+		menubar: "edit, insert, view, format, tools",
+		toolbar:  "undo, redo, formatselect, bold, italic, alignright, aligncenter, alignright, alignjustify, bullist, numlist  link",
+		link_assume_external_targets: true
+	});
+		
+	</script>
+{% endblock javascript %}
