--- a/src/LarpManager/Views/admin/chronologie/remove.twig
+++ b/src/LarpManager/Views/admin/chronologie/remove.twig
@@ -1,16 +1,32 @@
 {% extends "layout.twig" %}
 
 {% block content %}
+
+	<ol class="breadcrumb">
+		<li><a href="{{ path('homepage') }}">Accueil</a></li>
+		<li><a href="{{ path('chronologie') }}">Liste des événements</a></li>
+		<li class="active">Supprimer d'un événement</li>
+	</ol>
 	
-	<form action="{{ path('chrono_remove', {index: chronologie.id}) }}" method="POST">
-		<h1>Etes vous certain de vouloir supprimer cette chronologie ?</h1>
-		<ul>
-		<li>Identifiant : {{ chronologie.id }}</li>
-		<li>Pays : {{ chronologie.pays.nom }}</li>
-		<li>Date : {{ chronologie.date|date('Y-m-d') }}</li>
-		<li>Description : {{ chronologie.description }}</li>
-		</ul>
-		<input type="submit" value="Supprimer" />
-	</form>
+	<div class="well bs-component">
+	
+		<form action="{{ path('chronologie.admin.remove', {'index': chronologie.id}) }}" method="POST">
+		{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
+			<fieldset>
+				<legend>Suppression d'un événement</legend>
+				
+				<h4>Etes vous certain de vouloir supprimer cette chronologie ?</h4>
+				<ul>
+				<li>Identifiant : {{ chronologie.id }}</li>
+				<li>Pays : {{ chronologie.territoire.nom }}</li>
+				<li>Pays : {{ chronologie.visibilite }}</li>
+				<li>Date : {{ chronologie.year }} {{ chronologie.month }} {{ chronologie.day }}</li>
+				<li>Description : {{ chronologie.description|markdown }}</li>
+				</ul>
+			
+				{{ form(form) }}
+			</fieldset>
+		</form>
+	</div>
 	
 {% endblock %}
