--- a/src/LarpManager/Views/forum/post_response.twig
+++ b/src/LarpManager/Views/forum/post_response.twig
@@ -50,7 +50,11 @@
 		tinyMCE.init({
 				mode: "textareas",
 				theme: "modern",
-				plugins : "spellchecker,insertdatetime,preview", 
+				plugins : "spellchecker,insertdatetime,preview,link,autolink",
+				browser_spellcheck: true,
+				menubar: "edit, insert, view, format, tools",
+				toolbar:  "undo, redo, formatselect, bold, italic, alignright, aligncenter, alignright, alignjustify, bullist, numlist  link",
+				link_assume_external_targets: true
 		});
 		
 	</script>
