--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -6,6 +6,8 @@
         	<meta http-equiv="X-UA-Compatible" content="IE=edge">
         	<meta name="viewport" content="width=device-width, initial-scale=1">
 			
+			<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+			<link rel="icon" href="/favicon.ico" type="image/x-icon">
 			
 			<link rel="stylesheet" href="{{ app.request.basepath }}/css/style.css" />
             <link rel="stylesheet" href="{{ app.request.basepath }}/css/normalize.css" />			                        
