--- a/src/LarpManager/Views/territoire/detail.twig
+++ b/src/LarpManager/Views/territoire/detail.twig
@@ -30,6 +30,58 @@
 	    		</div>
 	    		
 	    		<div class="list-group-item">
+	    			<h4 class="list-group-item-heading">Chronologie</h4>
+	    			
+	    			
+			<a class="btn btn-primary pull-right" href="{{ path('chronologie.admin.add', {'territoire': territoire.id}) }}">Ajouter un événement</a>
+		
+		
+			<table class="table table-striped table-bordered table-condensed table-hover">
+				<caption>Liste des événements</caption>
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>Pays</th>
+						<th>Date</th>
+						<th>Visibilité</th>
+						<th>Description</th>
+						<th/>
+						<th/>
+					</tr>
+				</thead>
+				<tbody>
+					{% for evenement in territoire.chronologies %}
+						<tr>
+							<td>{{ evenement.id }}</td>
+							<td>{{ evenement.territoire.nom }}</td>
+							<td>{{ evenement.year }} {{ evenement.month }} {{ evenement.day }}</td>
+							<td>{{ evenement.visibilite }}</td>
+							<td>{{ evenement.description|markdown }}</td>
+							<td>
+								<a 	class="btn btn-default"
+									title="Modifier" 
+									data-toggle="tooltip" data-placement="top"
+									href="{{ path('chronologie.admin.update', {index: evenement.id}) }}">
+									<i class="fa fa-pencil"></i>
+								</a>
+							</td>
+							<td>
+								<a 	class="btn btn-danger"
+									title="Supprimer" 
+									data-toggle="tooltip" data-placement="top"
+									href="{{ path('chronologie.admin.remove', {index: evenement.id}) }}">
+									<i class="fa fa-times"></i>
+								</a>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+	    			
+	    			
+	    		</div>
+	    		
+	    		<div class="list-group-item">
 	    			<h4 class="list-group-item-heading">Informations politiques</h4>
 	    			<p class="list-group-item-text">
 	    				<ul>
