--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="LarpManager">
     <head>
         {% block head %}
             <meta charset="utf-8">
@@ -46,19 +46,39 @@
         </div>
 			
          
-         {% block javascript %}
-	         <script src="{{ app.request.basepath }}/js/jquery-1.11.3.min.js"></script>
-	         <script src="{{ app.request.basepath }}/js/bootstrap.min.js"></script>
-	         <script src="{{ app.request.basepath }}/js/moment.js"></script>
-	         <script>
-	         	moment.locale('fr');
-	         </script>
-	         <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-	         <script type="text/javascript">
-		    	$(function () {
-		        	$("[data-toggle='tooltip']").tooltip();
-		    	});
-			</script>
+         
+        <script src="{{ app.request.basepath }}/js/jquery-1.11.3.min.js"></script>
+        <script src="{{ app.request.basepath }}/js/bootstrap.min.js"></script>
+        <script src="{{ app.request.basepath }}/js/moment.js"></script>
+        <script>
+        	moment.locale('fr');
+        </script>
+        <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+        <script type="text/javascript">
+	    	$(function () {
+	        	$("[data-toggle='tooltip']").tooltip();
+	    	});
+		</script>
+		<script src="{{ app.request.basepath }}/js/tinymce/tinymce.min.js"></script>
+	
+		<script type="text/javascript">
+			tinyMCE.init({
+				selector: '.tinymce',
+				theme: "modern",
+				plugins : "spellchecker,insertdatetime,preview,link,autolink",
+				browser_spellcheck: true,
+				menubar: "edit, insert, view, format, tools",
+				toolbar:  "undo, redo, formatselect, bold, italic, alignright, aligncenter, alignright, alignjustify, bullist, numlist  link",
+				link_assume_external_targets: true
+			});
+		</script>
+				
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.min.js"></script>
+	    <script src="{{ app.request.basepath }}/js/api/services.js"></script>
+	    <script src="{{ app.request.basepath }}/js/api/controllers.js"></script>
+    	
+    	{% block javascript %}	
 		{% endblock javascript %}
     </body>
 </html>
